# schnorr_signature

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: musig.rs  simple_signature.rs
examples/musig/: Cargo.toml
examples/musig/src/: main.rs
examples/simple_signature/: Cargo.toml
examples/simple_signature/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_message.rs  fuzz_private_key.rs
src/: keys_management.rs  lib.rs  rand_nonce.rs  schnorr_single_signature.rs  telemetry.rs
src/schnorr_musig/: mod.rs  musig_math.rs
src/schnorr_musig/musig_protocol/: aggregator.rs  mod.rs  party.rs  protocol_messages.rs
