[package]
name = "schnorr_signature"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "schnorr_signature"

[dependencies]
curve25519-dalek = { version = "4.1.1", features = ["rand_core", "digest", "serde"] }
rand = "0.8.5"
sha2 = "0.10.8"
log = "0.4"
serde = { version = "1", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
