[package]
name = "schnorr_signature-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand = "0.8.5"
secrecy = { version = "0.8", features = ["serde"] }
curve25519-dalek = { version = "4.1.1", features = ["rand_core", "digest", "serde"] }
sha2 = "0.10.8"

[dependencies.schnorr_signature]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[[bin]]
name = "fuzz_target_2"
path = "fuzz_targets/fuzz_target_2.rs"
test = false
doc = false
